<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Self Diagnostic</string>
    <string name="reset_dialog_title">Reset</string>
    <string name="reset_dialog_content">Tap reset to clear all of the test result?</string>
    <string name="clear_dialog_title">Clear</string>
    <string name="clear_dialog_content">Tap clear to clear all of the test result?</string>
    <string name="main_cpu_title">CPU Load</string>
    <string name="main_battery_title">Battery Level</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="menu_test_result">Test Results</string>
    <string name="menu_test_clear">Clear</string>
    <string name="menu_test_reset">Reset</string>
    <string name="menu_test_about">About</string>
    <string name="menu_test_exit">Exit</string>
    <string name="menu_test_cancel">Cancel</string>
    <string name="default_cpu_percent">"54"</string>
    <string name="default_battery_percent">"60"</string>
    <string name="chart_legend_temperature">Temperature:</string>
    <string name="chart_legend_cpu">CPU</string>
    <string name="chart_legend_battery">Battery</string>
    <string name="main_bottom_button_test_all">Test all</string>
    <string name="main_bottom_button_single_test">Single test</string>
    <string name="main_bottom_button_repair">Repair</string>
    <string name="main_bottom_button_help">Help</string>
    <string name="test_case_bluetooth">Bluetooth Test</string>
    <string name="test_case_wifi">Wi-Fi Test</string>
    <string name="test_case_battery">Battery Test</string>
    <string name="test_case_e_compass">E-Compass Test</string>
    <string name="test_case_gyroscope">Gyroscope Test</string>
    <string name="test_case_mode">Modem Test</string>
    <string name="test_case_touch">Touch Test</string>
    <string name="test_case_g_sensor">G-Sensor Test</string>
    <string name="test_case_wireless_charging">Wireless Charging Test</string>
    <string name="test_case_keypad">Keypad Test</string>
    <string name="test_case_multi_touch">MultiTouch Test</string>
    <string name="test_case_vibrator">Vibrator Test</string>
    <string name="test_case_receiver">Receiver Test</string>
    <string name="test_case_speaker">Speaker Test</string>
    <string name="test_case_board_mic">BoardMic Test</string>
    <string name="test_case_board_mic2">BoardMic2 Test</string>
    <string name="test_case_main_cam">MainCam Test</string>
    <string name="test_case_VGA_cam">VGACam Test</string>
    <string name="test_case_camera_flash">Camera Flash Test</string>
    <string name="test_case_display">Display Test</string>
    <string name="test_case_headset">Headset Test</string>
    <string name="test_case_headset_mic">HeadsetMic Test</string>
    <string name="test_case_headset_key">HeadsetKey Test</string>
    <string name="test_case_proximity">Proximity Test</string>
    <string name="test_case_light_sensor">LightSensor Test</string>
    <string name="test_case_cmd_mouse">CMD Mouse Test</string>
    <string name="test_case_sd_card">SD Card Test</string>
    <string name="test_case_sim_card">SIM Card1 Test</string>
    <string name="test_case_sim_card2">SIM Card2 Test</string>
    <string name="test_case_nfc">NFC Test</string>
    <string name="test_case_fingerprint">Fingerprint Test</string>
    <string name="test_case_sim2">SIM2 Test</string>
    <string name="test_case_secondary_mic">SecondaryMic Test</string>
    <string name="test_case_camera_front_flash">Camera Front Flash Test</string>
    <string name="test_case_assist_cam">AssistCam Test</string>
    <string name="test_case_tele_cam">TeleCam Test</string>
    <string name="test_case_wide_cam">WideCam Test</string>
    <string name="test_case_ac">AC Charging Test</string>
    <string name="test_case_usb">USB Charging Test</string>
    <string name="test_case_phone">Phone Call Test</string>
    <string name="test_case_sim">SIM Signal Test</string>
    <string name="test_case_gps">GPS Test</string>
    <string name="test_case_vga_front">Front Camera Capture Test</string>
    <string name="test_case_tele_front">Front Tele Camera Capture Test</string>
    <string name="test_case_wide_front">Front WideCamera Capture Test</string>
    <string name="test_case_main_back">Main Camera Capture Test</string>
    <string name="test_case_main_wide">Main WideCamera Capture Test</string>
    <string name="repair_list_item_software_update">Software Update</string>
    <string name="repair_list_item_safe_mode">Safe Mode</string>
    <string name="repair_list_item_factory_reset">Factory Reset</string>
    <string name="help_list_item_hotline_service">Hotline service</string>
    <string name="help_list_item_send_request">Send a repair request</string>
    <string name="about_version">Version</string>
    <string name="about_version_value">V1.0.2</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_legal_info_value">Use this software is subject to terms and conditions on ASUS.</string>
    <string name="about_website">Website</string>
    <string name="about_website_value">Http://www.asus.com</string>
    <string name="hotline_service_product">Product</string>
    <string name="hotline_service_product_value1">All products</string>
    <string name="hotline_service_product_value2">Eee Pad</string>
    <string name="hotline_service_open_hour">Open Hour</string>
    <string name="hotline_service_open_hour_value">Mon~Fri,9:00&#8211;17:00</string>
    <string name="hotline_service_customer_support_number">Customer product support Phone Number</string>
    <string name="hotline_service_customer_support_number_value">0800&#8211;093&#8211;456</string>
    <string name="hotline_service_vip_support_number">ASUS Nexus 7 VIP support Phone Number</string>
    <string name="hotline_service_vip_support_number_value">0800&#8211;093&#8211;789</string>
    <string name="repair_request_name">Repair Request</string>
    <string name="repair_request_title">Please fill the blanks and send the repair request.</string>
    <string name="repair_request_first_name">First Name:</string>
    <string name="repair_request_last_name">Last Name:</string>
    <string name="repair_request_email">Email:</string>
    <string name="repair_request_phone">Phone:</string>
    <string name="repair_request_cell_phone">Cellphone:</string>
    <string name="repair_request_country">Country:</string>
    <string name="repair_request_address">Address:</string>
    <string name="repair_request_detail_address">Detail Address</string>
    <string name="repair_request_state">State:</string>
    <string name="repair_request_description">Leave some message to describe your request</string>
    <string name="repair_request_btn_send">Send</string>
    <string name="list_item_result_passed">Passed: %1$d</string>
    <string name="list_item_result_failed">Failed: %1$d</string>
    <string name="touch_title">Touch</string>
    <string name="btn_test_again">Test again</string>
    <string name="btn_start">Start</string>
    <string name="test_description">Description about the test item.Description about the test item.Description about the test item.Description about the test item.</string>
    <string name="test_pass">%1$s is work well</string>
    <string name="test_fail">%1$s is not work</string>
    <string name="test_fail_btn">Fail</string>
    <string name="test_pass_btn">Pass</string>
    <string name="if_not_charging_please_tap_fail">If not charging, please tap fail.</string>
    <string name="charging">Charging</string>
    <string name="playing_by_the_left_channel">Playing by the left channel...</string>
    <string name="please_press_volume_up_button">Please press Volume Up Button.</string>
    <string name="recent">Recent</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="please_move_your_phone_close_to_a_light">Please move your phone close to a light.</string>
    <string name="sensor_strong_light_adc_gt_300"><![CDATA[Sensor strong light(ADC>300)]]></string>
    <string name="sensor_weak_light_adc_lt_5"><![CDATA[Sensor weak light(ADC<5)]]></string>
    <string name="nfc_card_found">NFC card found</string>
    <string name="if_not_nfc_card_found_please_tap_the_fail_button">If not NFC card found, please tap the fail button.</string>
    <string name="please_move_your_hand_over_the_top_half_of_your_of_phone">Please move your hand over the top half of your of phone.</string>
    <string name="near">Near</string>
    <string name="away">Away</string>
    <string name="ten">10</string>
    <string name="touch">touch</string>
    <string name="camera_flash_description">Please check whether the camera flash light on or not and make a judge.</string>
    <string name="camera_front_flash_description">Please check whether the camera front flash light on or not and make a judge.</string>
    <string name="vibrator">Vibrator</string>
    <string name="action_one">1</string>
    <string name="action_two">2</string>
    <string name="action_three">3</string>
    <string name="action_four">4</string>
    <string name="action_five">5</string>
    <string name="pad_up">Volume Up</string>
    <string name="pad_dowm">Volume Down</string>
    <string name="pad_home">Home</string>
    <string name="pad_back">Back</string>
    <string name="pad_recent">Recent</string>
    <string name="pad_title">Please press <xliff:g id="btn">%s</xliff:g> button.</string>
    <string name="proximity_title">Please move your hand over the top half of your phone.</string>
    <string name="proximity_title_away">Please move your hand away from the top half of your phone.</string>
    <string name="proximity_txt_near">Near</string>
    <string name="proximity_txt_far">Away</string>
    <string name="headsetkey_title">Please press headset key.</string>
    <string name="headsetkey_txt">Headset Key</string>
    <string name="nfc_title">If no NFC card found, please tap the fail button.</string>
    <string name="nfc_found">NFC card found</string>
    <string name="nfc_txt">Scan a Tag</string>
    <string name="wirechargkey_title">If no charging, please tap the fail.</string>
    <string name="wirechargkey_txt">Charging</string>
    <string name="lightsensor_title">Please move your phone close to a light</string>
    <string name="lightsensor_title_weak">Please move your phone away from light and cover the top half of it using a hand</string>
    <string name="lightsensor_txt_strong">Sensor strong light(ADC>300)</string>
    <string name="lightsensor_txt_weak">Sensor weak light(ADC&lt;5)</string>
    <string name="dialog_title">Test finished</string>
    <string name="dialog_context"><xliff:g id="btn">%s</xliff:g> test finished. Please make a judgement!</string>
    <string name="headset_context_left">Playing by the left channel...</string>
    <string name="headset_context_right">Playing by the right channel...</string>
    <string name="headset_context_dialog_title">No headset found</string>
    <string name="speak_context_dialog_title">headset found</string>
    <string name="headset_context_dialog_conteent">Please plug in the headset and continue to test again</string>
    <string name="speak_context_dialog_conteent">Please remove the headset and continue to test again</string>
    <string name="headset_context_dialog_btn">OK</string>
    <string name="mic_context_dialog_record">Recording...</string>
    <string name="mic_context_dialog_play">Playing...</string>
    <string name="network">NetWork:</string>
    <string name="cellular_network">Cellular Network:</string>
    <string name="please_plug_sim_card">please plug sim card</string>
    <string name="sim_1_card">SIM 1 Card:</string>
    <string name="please_open_cellular_network_and_try_again">please open cellular network and try again.</string>
</resources>