<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:showIn="@layout/activity_main"
    android:background="@color/main_bg_color"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/percent_margin_top"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.secray.percentview.PercentView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            app:direction="top"
            app:firstColor="@color/cpu_0_50_bg"
            app:secondColor="@color/cpu_0_50"
            app:text="@string/default_cpu_percent"
            app:title="@string/main_cpu_title"
            />

        <com.secray.percentview.PercentView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            app:direction="top"
            app:firstColor="@color/batter_50_100_bg"
            app:secondColor="@color/batter_50_100"
            app:title="@string/main_battery_title"
            app:text="@string/default_battery_percent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/chart_legend_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            style="@style/AppTheme.LineChartLegendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_legend_temperature"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/chart_legend_padding_title"
            android:src="@drawable/ic_cpu_chart_line"/>

        <TextView
            style="@style/AppTheme.LineChartLegendTitle"
            android:paddingLeft="@dimen/chart_legend_padding_cpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_legend_cpu"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_battery_chart_line"
            android:paddingLeft="@dimen/chart_legend_padding_cpu_battery"/>

        <TextView
            style="@style/AppTheme.LineChartLegendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/chart_legend_padding_cpu"
            android:text="@string/chart_legend_battery"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
    </com.github.mikephil.charting.charts.LineChart>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2">
        <LinearLayout
            style="@style/AppTheme.BottomAction"
            android:layout_marginRight="@dimen/main_bottom_button_divider_line"
            android:layout_marginBottom="@dimen/main_bottom_button_divider_line">
            <TextView
                android:id="@+id/test_all"
                style="@style/AppTheme.BottomActionText"
                android:drawableTop="@drawable/main_test_all_button"
                android:text="@string/main_bottom_button_test_all"/>
        </LinearLayout>
        <LinearLayout
            style="@style/AppTheme.BottomAction"
            android:layout_marginRight="@dimen/main_bottom_button_divider_line"
            android:layout_marginBottom="@dimen/main_bottom_button_divider_line">
            <TextView
                android:id="@+id/single_test"
                style="@style/AppTheme.BottomActionText"
                android:drawableTop="@drawable/main_test_single_button"
                android:text="@string/main_bottom_button_single_test"/>
        </LinearLayout>
        <LinearLayout
            style="@style/AppTheme.BottomAction"
            android:layout_marginRight="@dimen/main_bottom_button_divider_line"
            android:layout_marginTop="@dimen/main_bottom_button_divider_line">
            <TextView
                android:id="@+id/repair"
                style="@style/AppTheme.BottomActionText"
                android:drawableTop="@drawable/main_repair_button"
                android:text="@string/main_bottom_button_repair"/>
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.BottomAction"
            android:layout_marginRight="@dimen/main_bottom_button_divider_line"
            android:layout_marginTop="@dimen/main_bottom_button_divider_line">
            <TextView
                android:id="@+id/help"
                style="@style/AppTheme.BottomActionText"
                android:drawableTop="@drawable/main_help_button"
                android:text="@string/main_bottom_button_help"/>
        </LinearLayout>
    </GridLayout>
</LinearLayout>