<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/sim_id"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/sim_1_card"/>
            <TextView
                android:id="@+id/sim_msg"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/please_plug_sim_card"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/network"/>
            <TextView
                android:id="@+id/network"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="1111111111"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/cellular_network"/>
            <TextView android:layout_column="1"
                android:layout_weight="1"
                android:text="1111111111"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:layout_column="1"
                android:layout_weight="1"
                android:text="Signal Level:"/>
            <TextView android:layout_column="1"
                android:layout_weight="1"
                android:text="1111111111"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:layout_column="1"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/please_open_cellular_network_and_try_again"/>
        </TableRow>
    </TableLayout>
</LinearLayout>